--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,8 +25,8 @@ jobs:
     - run: |
         npm install
 
-    - run: |
+    #- run: |
 
-        pm2 restart ServerAPI
+     #   pm2 restart ServerAPI
     # - run: pm2 restart ServerAPI
-    # - run: | pm2 start app.js --name=ServerAPI    
+     - run: | pm2 start app.js --name=ServerAPI    
