--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,5 +24,7 @@ jobs:
         
     - run: |
         npm install
-    - run: | 
-        pm2 start app.js --name=NationalParkTrailHiking    
+    - run: |
+        pm2 restart ServerAPI
+    # - run: pm2 restart ServerAPI
+    # - run: | pm2 start app.js --name=ServerAPI    
