--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,4 +27,4 @@ jobs:
     - run: |
         pm2 restart ServerAPI
     # - run: pm2 restart ServerAPI
-    # - run: | pm2 start app.js --name=ServerAPI    
+    # - run: | pm2 start app.js --name=NationalParkTrailHiking    
